<resources>
    <string name="app_name">InsertMoviesL11</string>
    <string name="title">Movie Title</string>
    <string name="titleInfo">Enter movie title here</string>
    <string name="genre">Genre</string>
    <string name="genreInfo">Enter genre here</string>
    <string name="year">Year</string>
    <string name="yearInfo">Enter year of release here</string>
    <string name="rating">Rating</string>
    <string name="insert">INSERT</string>
    <string name="showlist">SHOW LIST</string>
    <string-array name="movieRatings">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
    <string name="showTitle">Title</string>
    <string name="showGenre">Genre</string>
    <string name="showYear">Year</string>
</resources>